--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,1 +1,48 @@
 // Enter any custom Sass in this file.
+
+// Make sure goal 18 receives the box-shadow treatment.
+#main-content .goal-tiles .no-gutters img#goal-18 {
+    box-shadow: 5px 5px 5px 0px rgba(5, 5, 5, 0.3);
+}
+#main-content .goal-tiles .no-gutters img#goal-18:hover {
+    box-shadow: 5px 5px 5px 0px rgba(5, 5, 5, 0.6);
+}
+#main-content .goal-tiles .no-gutters img#goal-18 {
+    background-color: $backgroundColor;
+}
+
+// This needs to be moved to Open SDG.
+#national, #global {
+    img {
+        max-width: 100%;
+    }
+}
+
+@font-face {
+    font-family: 'Phetsarath_OT';
+    src: url('../fonts/phetsarath_ot.eot');
+    src: url('../fonts/phetsarath_ot.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/phetsarath_ot.woff2') format('woff2'),
+    url('../fonts/phetsarath_ot.woff') format('woff'),
+    url('../fonts/phetsarath_ot.ttf') format('truetype'),
+    url('../fonts/phetsarath_ot.svg#Phetsarath_OT') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.frontpage-hero {
+    width: 100%;
+}
+
+.site-intro {
+    background: none;
+    padding-right: 0;
+}
+
+body.language-lo, .language-option-lo {
+    font-family: 'Phetsarath_OT';
+}
+
+.language-option-en {
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
